@@ -2,12 +2,12 @@ package com.artillexstudios.axinventoryrestore;
 
 import com.artillexstudios.axapi.AxPlugin;
 import com.artillexstudios.axapi.config.Config;
-import com.artillexstudios.axapi.libs.boostedyaml.boostedyaml.dvs.versioning.BasicVersioning;
-import com.artillexstudios.axapi.libs.boostedyaml.boostedyaml.settings.dumper.DumperSettings;
-import com.artillexstudios.axapi.libs.boostedyaml.boostedyaml.settings.general.GeneralSettings;
-import com.artillexstudios.axapi.libs.boostedyaml.boostedyaml.settings.loader.LoaderSettings;
-import com.artillexstudios.axapi.libs.boostedyaml.boostedyaml.settings.updater.UpdaterSettings;
-import com.artillexstudios.axapi.libs.libby.BukkitLibraryManager;
+import com.artillexstudios.axapi.dependencies.DependencyManagerWrapper;
+import com.artillexstudios.axapi.libs.boostedyaml.dvs.versioning.BasicVersioning;
+import com.artillexstudios.axapi.libs.boostedyaml.settings.dumper.DumperSettings;
+import com.artillexstudios.axapi.libs.boostedyaml.settings.general.GeneralSettings;
+import com.artillexstudios.axapi.libs.boostedyaml.settings.loader.LoaderSettings;
+import com.artillexstudios.axapi.libs.boostedyaml.settings.updater.UpdaterSettings;
 import com.artillexstudios.axapi.metrics.AxMetrics;
 import com.artillexstudios.axapi.utils.MessageUtils;
 import com.artillexstudios.axapi.utils.featureflags.FeatureFlags;
@@ -30,6 +30,8 @@ import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.Nullable;
 import revxrsal.commands.bukkit.BukkitCommandHandler;
+import revxrsal.zapper.DependencyManager;
+import revxrsal.zapper.relocation.Relocation;
 
 import java.io.File;
 import java.util.Locale;
@@ -62,21 +64,24 @@ public final class AxInventoryRestore extends AxPlugin {
         return threadedQueue;
     }
 
-    public void load() {
-        BukkitLibraryManager libraryManager = new BukkitLibraryManager(this, "lib");
-        libraryManager.addMavenCentral();
-        libraryManager.addJitPack();
-        libraryManager.addRepository("https://repo.codemc.org/repository/maven-public/");
-        libraryManager.addRepository("https://repo.papermc.io/repository/maven-public/");
+    @Override
+    public void dependencies(DependencyManagerWrapper manager) {
+        instance = this;
+        manager.repository("https://jitpack.io/");
+        manager.repository("https://repo.codemc.org/repository/maven-public/");
+        manager.repository("https://repo.papermc.io/repository/maven-public/");
+        manager.repository("https://repo.artillex-studios.com/releases/");
 
+        DependencyManager dependencyManager = manager.wrapped();
         for (Libraries lib : Libraries.values()) {
-            libraryManager.loadLibrary(lib.getLibrary());
+            dependencyManager.dependency(lib.fetchLibrary());
+            for (Relocation relocation : lib.relocations()) {
+                dependencyManager.relocate(relocation);
+            }
         }
     }
 
     public void enable() {
-        instance = this;
-
         int pluginId = 19446;
         final Metrics bstats = new Metrics(this, pluginId);
 
@@ -112,7 +117,7 @@ public final class AxInventoryRestore extends AxPlugin {
         handler.getAutoCompleter().registerSuggestion("offlinePlayers", (args, sender, command) -> Bukkit.getOnlinePlayers().stream().map(Player::getName).toList());
 
         handler.getTranslator().add(new CommandMessages());
-        handler.setLocale(new Locale("en", "US"));
+        handler.setLocale(Locale.of("en", "US"));
 
         handler.register(new Commands());
 
@@ -122,7 +127,7 @@ public final class AxInventoryRestore extends AxPlugin {
         if (loadDiscordAddon && !DISCORD.getString("token").isBlank()) discordAddon = new DiscordAddon();
         bstats.addCustomChart(new SimplePie("uses_discord_addon", () -> "" + loadDiscordAddon));
 
-        metrics = new AxMetrics(19);
+        metrics = new AxMetrics(this, 19);
         metrics.start();
 
         if (CONFIG.getBoolean("update-notifier.enabled", true)) new UpdateNotifier(this, 4610);
